--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "build": "rollup -c"
   },
   "devDependencies": {
-    "rollup": "^2.77.3"
+    "@ampproject/rollup-plugin-closure-compiler": "^0.27.0",
+    "rollup": "^2.77.3",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
